Fix spacing of buttons
Angular spaces things weirdly by default, and makes the first button have different margins than the rest. That isn't what we want here.

Furthers #13.

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -28,10 +28,17 @@
   flex-grow: 1;
 }
 
-.note-card mat-card-actions {
+.note-card .mat-card-actions {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+// For some reason, Angular gives margins to every button but the first.
+// So, we have to go back and add these margins manually.
+.note-card .mat-card-actions .mat-button:first-child {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 p {
